--- a/myFirstApp/app/src/main/res/values/colors.xml
+++ b/myFirstApp/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6743A1</color>
-    <color name="colorPrimaryDark">#4D298C</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#303036</color>
+    <color name="colorPrimaryDark">#30BCED</color>
+    <color name="colorAccent">#FC5130</color>
 </resources>
