--- a/TipCalculator/app/src/main/res/values/colors.xml
+++ b/TipCalculator/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#EEE5E9</color>
+    <color name="colorPrimary">#FC5130</color>
+    <color name="Lavender">#EEE5E9</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#2B303A</color>
+    <color name="colorPrimary2">#FC5130</color>
 </resources>
