--- a/TipCalculator/app/src/main/res/values/styles.xml
+++ b/TipCalculator/app/src/main/res/values/styles.xml
@@ -6,6 +6,10 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="actionMenuTextColor">@color/colorPrimary2</item>
+        <item name="android:actionMenuTextColor">@color/colorPrimary2</item>
+
     </style>
+
 
 </resources>
